force-app/main/default/objects/Appointment_Item__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the procedure related to this schedule item</description>
    <inlineHelpText>Este campo se vincula un procedimiento que está asociado con el elemento en el cronograma.</inlineHelpText>
    <label>Procedimiento</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ítems de la programación</relationshipLabel>
    <relationshipName>Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>