force-app/main/default/objects/Appointment_Item__c/fields/Professional__c.field-meta.xml
<CustomField>
    <fullName>Professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the professional assigned to the item</description>
    <inlineHelpText>This field links to the user who will be responsible for performing the procedure</inlineHelpText>
    <label>Profesional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>