force-app/main/default/objects/Appointment_Item__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>Relates to the associated schedule for this item</description>
    <inlineHelpText>This field links the item to a specific schedule, allowing you to associate the item with a particular program</inlineHelpText>
    <label>Schedule</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipName>Schedule_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>