force-app/main/default/objects/Appointment_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Represents the status of the schedule item</description>
    <inlineHelpText>Select the current status of this item in the schedule</inlineHelpText>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Completado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>