force-app/main/default/objects/Appointment_Item__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The monetary value associated with the schedule item</description>
    <inlineHelpText>Ingrese el valor del procedimiento</inlineHelpText>
    <label>Valor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>