force-app/main/default/objects/Appointment_Item__c/validationRules/Prevent_New_Items_After_Reserved.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_New_Items_After_Reserved</fullName>
    <active>true</active>
    <description>This validation rule ensures that no new items can be added to a reservation once its status has been changed to &quot;Scheduled&quot;</description>
    <errorConditionFormula>IF( ISPICKVAL(Schedule__r.Status__c, &quot;Scheduled&quot;), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>You cannot add new items to the reservation once it has been marked as &apos;Scheduled&apos;.</errorMessage>
</ValidationRule>