force-app/main/default/objects/Appointment_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Schedule__c</columns>
    <columns>Procedure__c</columns>
    <columns>Professional__c</columns>
    <columns>Duration__c</columns>
    <columns>Value__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>